@@ -6,7 +6,7 @@ rm -rf build
 TESTED=""
 for PYVER in 2.5 2.6 2.7; do
     PYTHON=python$PYVER
-    $PYTHON -c pass || continue
+    $PYTHON -c pass 1>/dev/null 2>&1 || continue
     $PYTHON setup.py build
     PYTHONPATH=$(cd build/lib.*-$PYVER/; pwd) $PYTHON tests.py --raise
     if [ ! -z "$TESTED" ]; then
@@ -16,4 +16,4 @@ for PYVER in 2.5 2.6 2.7; do
     fi
 done
 
-echo "pysandbox tesed on Python $TESTED"
+echo "pysandbox tested on Python $TESTED"
