@@ -3,6 +3,8 @@ Version 1.6
 
 FIXME: repair ClearImport() protection, or remove it
 
+    * SECURITY FIX: __builtins__ is now readonly when execute() is used.
+      It was only readonly when call() was used.
     * Execute code in a subprocess using the Python subprocess module
       or os.fork()
     * Add --disable-subprocess command line option
